@@ -34,6 +34,7 @@ libdieharder_la_SOURCES = \
 	dab_bytedistrib.c \
 	dab_dct.c \
 	dab_filltree.c \
+	dab_filltree2.c \
 	dab_monobit2.c \
 	diehard_2dsphere.c \
 	diehard_3dsphere.c \
